overflow fixes

--- a/screen.css
+++ b/screen.css
@@ -16,7 +16,6 @@ html, body {
 	padding: 0px;
 	margin: 0px;
 	min-height: 100%;
-	height: 100%;
 }
 
 ::selection { background: transparent; }
